# BLSync

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.toml  container_build.sh  docker-compose-dev.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
config/: config.template.toml  config.toml
docker/: Dockerfile  docker-compose-dev.yaml  docker-compose.yaml  docker-entrypoint.sh
docs/: docker-workflow.md  download-progress.md
scripts/: test_release.sh
src/bili_sync_py/: configs.py  db_access.py  downloader.py  main.py  scraper.py
src/blsync/: __init__.py  api.py  configs.py  database.py  db_access.py  downloader.py  main.py  postprocessor.py  progress.py  scraper.py  task_models.py
src/blsync/consumer/: README.md  __init__.py  base.py  bilibili.py  yutto_wrapper.py
src/blsync/model/: task.py
src/tests/: test_api.py  test_progress.py  test_scraper.py  test_task_models.py
static/: index.html
tests/: test_api.py  test_downloader.py  test_scraper.py  test_task_models.py
tests/bili_sync_py/: test_scraper.py
