[project]
name = "BLSync"
version = "0.2.0"
description = "BLSync is for syncing your bilibili favorite list to local."
authors = [
    {name = "oxygenkun", email = "oxygenkun.1@gmail.com"}
]
maintainers = [
    {name = "oxygenkun", email = "oxygenkun.1@gmail.com"}
]
license = {text = "MIT"}
keywords = ["bilibili", "download", "sync", "video", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]
dependencies = [
    "toml>=0.10.2",
    "bilibili-api-python>=17.1.4",
    "fastapi>=0.115.5",
    "uvicorn>=0.32.0",
    "loguru>=0.7.2",
    "aiohttp>=3.11.18",
    "yutto>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/oxygenkun/BLSync"
Repository = "https://github.com/oxygenkun/BLSync"
Documentation = "https://github.com/oxygenkun/BLSync#readme"
Issues = "https://github.com/oxygenkun/BLSync/issues"
Changelog = "https://github.com/oxygenkun/BLSync/releases"

[project.scripts]
bs = 'blsync.main:start_server'

[project.optional-dependencies]
dev = [
    "ruff>=0.7.3",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = ["ruff>=0.7.3", "pytest>=8.3.3", "pytest-asyncio>=0.24.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blsync"]

[tool.ruff]
lint.extend-select = ["I"]
