[project]
name = "BLSync"
version = "0.4.3"
requires-python = ">=3.13"
description = "BLSync is for syncing your bilibili favorite list to local."
authors = [
    {name = "oxygenkun", email = "oxygenkun.1@gmail.com"}
]
maintainers = [
    {name = "oxygenkun", email = "oxygenkun.1@gmail.com"}
]
license = {text = "MIT"}
keywords = ["bilibili", "download", "sync", "video", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]
dependencies = [
    "toml>=0.10.2",
    "bilibili-api-python>=17.4.1",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "loguru>=0.7.3",
    "aiohttp>=3.13.5",
    "yutto>=2.2.0",
    "pydantic-settings>=2.14.1",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.49",
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.0",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/oxygenkun/BLSync"
Repository = "https://github.com/oxygenkun/BLSync"
Documentation = "https://github.com/oxygenkun/BLSync#readme"
Issues = "https://github.com/oxygenkun/BLSync/issues"
Changelog = "https://github.com/oxygenkun/BLSync/releases"

[project.scripts]
bs = 'blsync.main:main'

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blsync"]

[tool.ruff]
lint.extend-select = ["I"]
